note guesser function added

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -6,3 +6,4 @@
 @import 'bulma/sass/elements/button';
 @import 'bulma/sass/elements/container';
 @import 'bulma/sass/elements/title';
+@import 'bulma/sass/elements/tag';
